@startuml

title __RICARICA's Class Diagram__\n

  namespace com.woonders.lacemsjsf.view.ricarica {
    class com.woonders.lacemsjsf.view.ricarica.OperatorConverter {
        + OperatorConverter()
        + getAsObject()
        + getAsString()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.ricarica {
    class com.woonders.lacemsjsf.view.ricarica.RicaricaView {
        {static} + JSF_NAME : String
        {static} + NAME : String
        - ricaricaComunicazioneViewModelLazyDataModel : LazyDataModel<RicaricaComunicazioneViewModel>
        + getAziendaSelectionView()
        + getAziendaService()
        + getAziendaUtil()
        + getHttpSessionUtil()
        + getOperatorList()
        + getOperatorService()
        + getPassaggioParametriUtils()
        + getPropertiesUtil()
        + getRequestTenantIdentifierResolver()
        + getRicaricaComunicazioneViewModelLazyDataModel()
        + getRicaricaDescriptionText()
        + getRicaricaService()
        + getSelectedOperatorViewModel()
        + getSelectedRicaricaType()
        + getTipoArticolo()
        + init()
        + isDatiFatturazioneToBeCompleted()
        + isRicaricaOperatoreInProgress()
        + isRicaricaTypeAndOperatorChosen()
        + pay()
        + setAziendaSelectionView()
        + setAziendaService()
        + setAziendaUtil()
        + setHttpSessionUtil()
        + setOperatorService()
        + setPassaggioParametriUtils()
        + setPropertiesUtil()
        + setRequestTenantIdentifierResolver()
        + setRicaricaComunicazioneViewModelLazyDataModel()
        + setRicaricaService()
        + setSelectedOperatorViewModel()
        + setSelectedRicaricaType()
        + setSelectedTipoArticolo()
        + setTipoArticolo()
        + showFattura()
    }
  }
  

  com.woonders.lacemsjsf.view.ricarica.OperatorConverter -up-|> com.woonders.lacemsjsf.util.BaseConverter
  com.woonders.lacemsjsf.view.ricarica.OperatorConverter o-- com.woonders.lacemscommon.service.OperatorService : operatorService
  com.woonders.lacemsjsf.view.ricarica.RicaricaView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.service.AziendaService : aziendaService
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.db.entityutil.AziendaUtil : aziendaUtil
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.service.OperatorService : operatorService
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemsjsf.db.app.config.RequestTenantIdentifierResolver : requestTenantIdentifierResolver
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.service.RicaricaService : ricaricaService
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.app.viewmodel.OperatorViewModel : selectedOperatorViewModel
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.db.entityenum.RicaricaType : selectedRicaricaType
  com.woonders.lacemsjsf.view.ricarica.RicaricaView o-- com.woonders.lacemscommon.fattureincloud.network.request.newdoc.Articolo.TipoArticolo : tipoArticolo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
